# athena

./: .gitignore  .readthedocs.yaml  README.md  _pyrightconfig.json  setup.cfg
.github/workflows/: tests.yml
docs/: athena.rst
src/athena/: AtConstants.py  AtCore.py  AtExceptions.py  AtStatus.py  AtTests.py  AtUtils.py  __init__.py  atConstants.py  atCore.py  atEvent.py  atProfiling.py  atStatus.py  atUtils.py
src/athena/examples/blueprint/: exampleBlueprint.py
src/athena/examples/process/: exampleProcess.py
src/athena/software/: atBlender.py  atHoudini.py  atMaya.py  atStandalone.py  atUnrealEngine.py
src/docs/: athena.rst  conf.py  modules.rst
src/docs/_build/doctrees/: athena.doctree  athena.examples.doctree  athena.software.doctree  environment.pickle  index.doctree  modules.doctree
src/docs/_build/html/: .buildinfo  athena.examples.html  athena.html  athena.software.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/docs/_build/html/_modules/: index.html
src/docs/_build/html/_modules/athena/: AtCore.html  AtExceptions.html  AtStatus.html  AtTests.html  AtUtils.html
src/docs/_build/html/_modules/athena/examples/process/: exampleProcess.html
src/docs/_build/html/_modules/athena/software/: atBlender.html  atHoudini.html  atMaya.html  atStandalone.html  atUnrealEngine.html
src/docs/_build/html/_sources/: athena.examples.rst.txt  athena.rst.txt  athena.software.rst.txt  index.rst.txt
src/docs/_build/html/_static/: documentation_options.js
tests/: test_atStatus.py  test_atUtils.py  test_register.py
