[metadata]
name = athena-sanity
version = 1.0.0-beta
author = Gregory Pijat
author_email = pijat.gregory@gmail.com
description = Open Source Sanity Checking framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gpijat/athena
project_urls =
    Bug Tracker = https://github.com/gpijat/athena/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
