[metadata]
name = athena-sanity
version = 0.1.0-beta
author = Gregory Pijat
author_email = pijat.gregory@gmail.com
description = Open Source Sanity Checking framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gpijat/athena
project_urls =
    Bug Tracker = https://github.com/gpijat/athena/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Modeling
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
